[gd_scene load_steps=13 format=3 uid="uid://cfnlpvfc1d862"]

[ext_resource type="PackedScene" uid="uid://cuwuwco4sf0y6" path="res://scenes/map/map.tscn" id="1_7xwwf"]
[ext_resource type="Script" path="res://scenes/run/run.gd" id="1_bedv1"]
[ext_resource type="Resource" uid="uid://bd874b0h1q8n1" path="res://scenes/run/run_startup.tres" id="2_wgfut"]
[ext_resource type="PackedScene" uid="uid://dx377oa3pkut" path="res://scenes/ui/card_pile_opener.tscn" id="4_ayx7e"]
[ext_resource type="PackedScene" uid="uid://jfu1yenfdod5" path="res://scenes/ui/gold_ui.tscn" id="4_dtarl"]
[ext_resource type="PackedScene" uid="uid://b3dkx1dqlo0eo" path="res://scenes/ui/health_ui.tscn" id="4_k05q4"]
[ext_resource type="Texture2D" uid="uid://bc0ciu8ene25v" path="res://art/deck.png" id="5_dw5bf"]
[ext_resource type="PackedScene" uid="uid://d2jq2r5hb1ajk" path="res://scenes/ui/card_pile_view.tscn" id="6_4w0b2"]
[ext_resource type="PackedScene" uid="uid://bltkcscivnh8p" path="res://scenes/relic_handler/relic_handler.tscn" id="6_f8fbw"]
[ext_resource type="PackedScene" uid="uid://bwtke8nmynqt2" path="res://scenes/relic_handler/relic_tooltip.tscn" id="10_xh4qt"]
[ext_resource type="Script" path="res://scenes/run/pause_menu.gd" id="11_a4w7h"]

[sub_resource type="LabelSettings" id="LabelSettings_68deg"]

[node name="Run" type="Node" groups=["run"]]
script = ExtResource("1_bedv1")
run_startup = ExtResource("2_wgfut")

[node name="Map" parent="." instance=ExtResource("1_7xwwf")]

[node name="CurrentView" type="Node" parent="."]

[node name="DebugButtons" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
alignment = 1

[node name="MapButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Map"

[node name="BattleButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Battle"

[node name="ShopButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Shop"

[node name="TreasureButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Treasure"

[node name="RewardsButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Rewards"

[node name="CampfireButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Campfire"

[node name="TopBar" type="CanvasLayer" parent="."]
layer = 3

[node name="Background" type="ColorRect" parent="TopBar"]
custom_minimum_size = Vector2(0, 18)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
color = Color(0, 0, 0, 0.501961)

[node name="BarItems" type="HBoxContainer" parent="TopBar"]
custom_minimum_size = Vector2(0, 18)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="HealthUI" parent="TopBar/BarItems" instance=ExtResource("4_k05q4")]
unique_name_in_owner = true
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
show_max_hp = true

[node name="GoldUI" parent="TopBar/BarItems" instance=ExtResource("4_dtarl")]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="RelicHandlerContainer" type="CenterContainer" parent="TopBar/BarItems"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RelicHandler" parent="TopBar/BarItems/RelicHandlerContainer" instance=ExtResource("6_f8fbw")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="DeckButton" parent="TopBar/BarItems" node_paths=PackedStringArray("counter") instance=ExtResource("4_ayx7e")]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture_normal = ExtResource("5_dw5bf")
counter = NodePath("Counter")

[node name="Counter" type="Label" parent="TopBar/BarItems/DeckButton"]
layout_mode = 0
offset_left = -5.0
offset_top = 12.0
offset_right = 5.0
offset_bottom = 18.0
text = "99"
horizontal_alignment = 1

[node name="DeckView" parent="TopBar" instance=ExtResource("6_4w0b2")]
unique_name_in_owner = true
visible = false

[node name="RelicTooltip" parent="TopBar" instance=ExtResource("10_xh4qt")]
unique_name_in_owner = true
visible = false

[node name="PauseMenu" type="CanvasLayer" parent="."]
process_mode = 3
layer = 5
visible = false
script = ExtResource("11_a4w7h")

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.705882)

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -20.0
offset_right = 47.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Paused"
label_settings = SubResource("LabelSettings_68deg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BackToGameButton" type="Button" parent="PauseMenu/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 14)
layout_mode = 2
text = "Back"

[node name="SaveAndQuitButton" type="Button" parent="PauseMenu/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "Main Menu"
